crates/bevy_ecs/compile_fail/tests/ui/query_lifetime_safety.stderr
error[E0502]: cannot borrow `query` as mutable because it is also borrowed as immutable
  --> tests/ui/query_lifetime_safety.rs:LL:CC
   |
LL |             let data: &Foo = query.get(e).unwrap();
   |                              ----- immutable borrow occurs here
LL |             let mut data2: Mut<Foo> = query.get_mut(e).unwrap();
   |                                       ^^^^^^^^^^^^^^^^ mutable borrow occurs here
LL |
LL |             assert_eq!(data, &mut *data2); // oops UB
   |             ----------------------------- immutable borrow later used here

error[E0502]: cannot borrow `query` as immutable because it is also borrowed as mutable
  --> tests/ui/query_lifetime_safety.rs:LL:CC
   |
LL |             let mut data2: Mut<Foo> = query.get_mut(e).unwrap();
   |                                       ----- mutable borrow occurs here
LL |             let data: &Foo = query.get(e).unwrap();
   |                              ^^^^^ immutable borrow occurs here
LL |
LL |             assert_eq!(data, &mut *data2); // oops UB
   |                                    ----- mutable borrow later used here

error[E0502]: cannot borrow `query` as mutable because it is also borrowed as immutable
  --> tests/ui/query_lifetime_safety.rs:LL:CC
   |
LL |             let data: &Foo = query.single();
   |                              ----- immutable borrow occurs here
LL |             let mut data2: Mut<Foo> = query.single_mut();
   |                                       ^^^^^^^^^^^^^^^^^^ mutable borrow occurs here
LL |
LL |             assert_eq!(data, &mut *data2); // oops UB
   |             ----------------------------- immutable borrow later used here

error[E0502]: cannot borrow `query` as immutable because it is also borrowed as mutable
  --> tests/ui/query_lifetime_safety.rs:LL:CC
   |
LL |             let mut data2: Mut<Foo> = query.single_mut();
   |                                       ----- mutable borrow occurs here
LL |             let data: &Foo = query.single();
   |                              ^^^^^ immutable borrow occurs here
LL |
LL |             assert_eq!(data, &mut *data2); // oops UB
   |                                    ----- mutable borrow later used here

error[E0502]: cannot borrow `query` as mutable because it is also borrowed as immutable
  --> tests/ui/query_lifetime_safety.rs:LL:CC
   |
LL |             let data: &Foo = query.get_single().unwrap();
   |                              ----- immutable borrow occurs here
LL |             let mut data2: Mut<Foo> = query.get_single_mut().unwrap();
   |                                       ^^^^^^^^^^^^^^^^^^^^^^ mutable borrow occurs here
LL |
LL |             assert_eq!(data, &mut *data2); // oops UB
   |             ----------------------------- immutable borrow later used here

error[E0502]: cannot borrow `query` as immutable because it is also borrowed as mutable
  --> tests/ui/query_lifetime_safety.rs:LL:CC
   |
LL |             let mut data2: Mut<Foo> = query.get_single_mut().unwrap();
   |                                       ----- mutable borrow occurs here
LL |             let data: &Foo = query.get_single().unwrap();
   |                              ^^^^^ immutable borrow occurs here
LL |
LL |             assert_eq!(data, &mut *data2); // oops UB
   |                                    ----- mutable borrow later used here

error[E0502]: cannot borrow `query` as mutable because it is also borrowed as immutable
  --> tests/ui/query_lifetime_safety.rs:LL:CC
   |
LL |             let data: &Foo = query.iter().next().unwrap();
   |                              ----- immutable borrow occurs here
LL |             let mut data2: Mut<Foo> = query.iter_mut().next().unwrap();
   |                                       ^^^^^^^^^^^^^^^^ mutable borrow occurs here
LL |
LL |             assert_eq!(data, &mut *data2); // oops UB
   |             ----------------------------- immutable borrow later used here

error[E0502]: cannot borrow `query` as immutable because it is also borrowed as mutable
  --> tests/ui/query_lifetime_safety.rs:LL:CC
   |
LL |             let mut data2: Mut<Foo> = query.iter_mut().next().unwrap();
   |                                       ----- mutable borrow occurs here
LL |             let data: &Foo = query.iter().next().unwrap();
   |                              ^^^^^ immutable borrow occurs here
LL |
LL |             assert_eq!(data, &mut *data2); // oops UB
   |                                    ----- mutable borrow later used here

error[E0502]: cannot borrow `query` as mutable because it is also borrowed as immutable
  --> tests/ui/query_lifetime_safety.rs:LL:CC
   |
LL |             query.iter().for_each(|data| opt_data = Some(data));
   |             ----- immutable borrow occurs here
LL |             query.iter_mut().for_each(|data| opt_data_2 = Some(data));
   |             ^^^^^^^^^^^^^^^^ mutable borrow occurs here
LL |
LL |             assert_eq!(opt_data.unwrap(), &mut *opt_data_2.unwrap()); // oops UB
   |                        -------- immutable borrow later used here

error[E0502]: cannot borrow `query` as immutable because it is also borrowed as mutable
  --> tests/ui/query_lifetime_safety.rs:LL:CC
   |
LL |             query.iter_mut().for_each(|data| opt_data_2 = Some(data));
   |             ----- mutable borrow occurs here
LL |             query.iter().for_each(|data| opt_data = Some(data));
   |             ^^^^^ immutable borrow occurs here
LL |
LL |             assert_eq!(opt_data.unwrap(), &mut *opt_data_2.unwrap()); // oops UB
   |                                                 ---------- mutable borrow later used here

error: aborting due to 10 previous errors

For more information about this error, try `rustc --explain E0502`.
